Added JavaFX UI for adding event